[project]
name = "reader3"
version = "0.1.0"
description = "Simple EPUB/PDF/Markdown reader web app"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "ebooklib>=0.20",
    "fastapi>=0.121.2",
    "jinja2>=3.1.6",
    "uvicorn>=0.38.0",
    "streamlit>=1.32.0",
    "openai>=1.0.0",
    "google-generativeai>=0.3.0",
    "pypdf2>=3.0.0",
    "markdown>=3.5.0",
    "python-markdown-math>=0.8",
]
